Add SFML relative path and Game class with main loop scheme

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
 x64
 Debug
 .vs
-poketechnika.sln
+poketechnika/SFML
 poketechnika/Debug
 poketechnika/x64
-poketechnika/poketechnika.vcxproj
-poketechnika/poketechnika.vcxproj.filters
-poketechnika/poketechnika.vcxproj.user
+poketechnika/sfml-audio-2.dll
+poketechnika/sfml-audio-d-2.dll
+poketechnika/sfml-graphics-2.dll
+poketechnika/sfml-graphics-d-2.dll
+poketechnika/sfml-system-2.dll
+poketechnika/sfml-system-d-2.dll
+poketechnika/sfml-window-2.dll
+poketechnika/sfml-window-d-2.dll
+poketechnika/openal32.dll
+/SFML
