--- a/poketechnika/poketechnika.vcxproj
+++ b/poketechnika/poketechnika.vcxproj
@@ -139,18 +139,18 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Scene.cpp" />
-    <ClCompile Include="SceneGame.cpp" />
+    <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
-    <ClCompile Include="SceneMenu.cpp" />
+    <ClCompile Include="MenuScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="database.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Scene.h" />
-    <ClInclude Include="SceneGame.h" />
+    <ClInclude Include="GameScene.h" />
     <ClInclude Include="SceneManager.h" />
-    <ClInclude Include="SceneMenu.h" />
+    <ClInclude Include="MenuScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
