Add player with movement and collision detection. Add framerate and time measuring. Change all int variables to float (for smooher movement). Fixed inputmanager issues. Moved gamemanager map first map loading to start().

--- a/poketechnika/poketechnika.vcxproj.filters
+++ b/poketechnika/poketechnika.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="Exception.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -105,6 +108,12 @@
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
     <ClInclude Include="Exception.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
+    <ClInclude Include="State.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
