--- a/poketechnika/poketechnika.vcxproj
+++ b/poketechnika/poketechnika.vcxproj
@@ -141,39 +141,47 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="database.cpp" />
+    <ClCompile Include="Drawable.cpp" />
     <ClCompile Include="Exception.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameInputHandler.cpp" />
     <ClCompile Include="GameObject.cpp" />
-    <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="GeneralInputHandler.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="MenuInputaHandler.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="pugixml.cpp" />
     <ClCompile Include="Renderer.cpp" />
-    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="Tile.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="actions.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="database.h" />
+    <ClInclude Include="Drawable.h" />
     <ClInclude Include="Exception.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="GameManager.h" />
+    <ClInclude Include="GameInputHandler.h" />
     <ClInclude Include="GameObject.h" />
-    <ClInclude Include="InputManager.h" />
+    <ClInclude Include="GeneralInputHandler.h" />
+    <ClInclude Include="MenuUI.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="MenuInputHandler.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="InputHandler.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="MenuScene.h" />
-    <ClInclude Include="State.h" />
+    <ClInclude Include="state.h" />
     <ClInclude Include="Tile.h" />
+    <ClInclude Include="UI.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
