--- a/poketechnika/poketechnika.vcxproj
+++ b/poketechnika/poketechnika.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="Tile.cpp" />
+    <ClCompile Include="UI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="actions.h" />
@@ -176,6 +177,7 @@
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="state.h" />
     <ClInclude Include="Tile.h" />
+    <ClInclude Include="UI.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
