--- a/poketechnika/poketechnika.vcxproj
+++ b/poketechnika/poketechnika.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="TextArea.cpp" />
+    <ClCompile Include="Text3Button.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="UI.cpp" />
   </ItemGroup>
@@ -190,6 +191,7 @@
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="state.h" />
     <ClInclude Include="TextArea.h" />
+    <ClInclude Include="Text3Button.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="UI.h" />
   </ItemGroup>
