--- a/poketechnika/poketechnika.vcxproj
+++ b/poketechnika/poketechnika.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="MenuScene.cpp" />
+    <ClCompile Include="TextArea.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="UI.cpp" />
   </ItemGroup>
@@ -186,6 +187,7 @@
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="state.h" />
+    <ClInclude Include="TextArea.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="UI.h" />
   </ItemGroup>
