--- a/poketechnika/poketechnika.vcxproj
+++ b/poketechnika/poketechnika.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bar.cpp" />
     <ClCompile Include="BattleScene.cpp" />
     <ClCompile Include="BossScene.cpp" />
     <ClCompile Include="Button.cpp" />
@@ -167,6 +168,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="actions.h" />
+    <ClInclude Include="Bar.h" />
     <ClInclude Include="BattleScene.h" />
     <ClInclude Include="BossScene.h" />
     <ClInclude Include="Button.h" />
